# spider-cloud-rs

./: .gitignore  Cargo.toml  README.md  backup.toml.example  cfmmc.toml.example  cliff.toml  cloud-uploader.toml.example
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
models/: model.onnx  vocab.txt
src/: lib.rs  logging.rs
src/notify/: chanify.rs  email.rs  mod.rs  pushgo.rs
src/uploader/: baidu.rs  cloud189.rs  mod.rs
