[package]
name = "spider-cloud-rs"
version = "0.1.2"
edition = "2024"

[dependencies]
aes = "0.9"
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
calamine = "0.34"
chrono = { version = "0.4", features = ["serde"] }
cipher = "0.5"
dirs = "6.0"
glob = "0.3"
hex = "0.4"
hmac = "0.13"
httpdate = "1"
indexmap = "2.14"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
md5 = "0.8"
quick-xml = { version = "0.39", features = ["serialize"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "form", "cookies", "rustls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
tar = "0.4"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"
